[gd_scene load_steps=2 format=3 uid="uid://bayflkqksrv3v"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_y1t3w"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y1t3w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -33.0
offset_right = 48.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Poly Pals"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Top Score:
 "
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Max Block Size:
6"
horizontal_alignment = 1

[node name="DifficultySlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 4.0
max_value = 10.0
value = 6.0
